kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-deployment
spec:
  selector:
    app: redis
    type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
